src/objects/Test_Step__c.object
<CustomObject>
    <description>PMO: Test Management. Store all test Steps that based on Test Case.</description>
    <fields>
        <fullName>Actual_Test_Result__c</fullName>
        <label>Actual Test Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <inlineHelpText>Data element for the test or guidance on how to select the data</inlineHelpText>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <inlineHelpText>Determine the expected result and enter it here.</inlineHelpText>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Navigation_Path__c</fullName>
        <inlineHelpText>Enter the application navigation steps.</inlineHelpText>
        <label>Navigation Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Passed_Results__c</fullName>
        <label>Passed Results</label>
        <summaryFilterItems>
            <field>Test_Step_Result__c.Status__c</field>
            <operation>equals</operation>
            <value>Passed</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Step_Result__c.Test_Step__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Run_Records__c</fullName>
        <label>Run Records</label>
        <summaryForeignKey>Test_Step_Result__c.Test_Step__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Description__c</fullName>
        <inlineHelpText>Add step details necessary to understand and execute the step.</inlineHelpText>
        <label>Step Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_Result__c</fullName>
        <formula>IF(Passed_Results__c = Run_Records__c, &quot;Passed&quot;,  &quot;Fail&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Test Step</relationshipLabel>
        <relationshipName>Test_Step</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Step</label>
    <nameField>
        <label>Test Step #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Step</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ActTestResult_is_required_when_failed</fullName>
        <active>true</active>
        <description>When test step stats is failed, Actual Test Result is required.</description>
        <errorConditionFormula>AND(   ISPICKVAL(Status__c, &quot;Failed&quot;) , or (ISNULL(Actual_Test_Result__c) , ISBLANK(Actual_Test_Result__c) ))</errorConditionFormula>
        <errorMessage>When test step stats is failed, Actual Test Result is required.</errorMessage>
    </validationRules>
</CustomObject>